syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "myapp/api/auth/v1;v1";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterReply {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}

service Auth {
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/auth/register";
      body: "*";
    };
  }

  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/auth/login";
      body: "*";
    };
  }
}